crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '1 * 2 + 4 % -3 != false'::jsonpath;"
---
SelectStmt@0..43
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..42
    TypeCast@7..42
      AConst@7..32
        Sconst@7..32 "'1 * 2 + 4 % -3 != fa ..."
      Typecast@32..34 "::"
      TypeName@34..42
        Ident@34..42 "jsonpath"
  Ascii59@42..43 ";"

