crates/pg_syntax/tests/snapshots/postgres_regress/jsonpath@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '\"\\b\\f\\r\\n\\t\\v\\\"\\''\\\\\"'::jsonpath;"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..40
    TypeCast@7..40
      AConst@7..30
        Sconst@7..30 "'\"\\b\\f\\r\\n\\t\\v\\\"\\''\\\\\"'"
      Typecast@30..32 "::"
      TypeName@32..40
        Ident@32..40 "jsonpath"
  Ascii59@40..41 ";"

